--- a/src/pages/css/header.css
+++ b/src/pages/css/header.css
@@ -1,48 +1,40 @@
-p, h1, h2, ul {
-    font-family: "Arial", Times, Sans-serif;
+header{
+    background-color: #fff;
 }
 
-ul {
-    font-size: 18px;
+.logo {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    vertical-align: middle;
+    float: left;
 }
 
-.helement{
-    width: 100%;
-    padding: 16px;
-}
-
-.helement:hover{
-    background-color: #E5E5E5;    
-    color: #3C3C3C;
-}
-
-ul {
-    
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #ffffff;
-}
-
-li {
+nav {
+    margin-top: 35px;
     float: right;
-
-    padding: 16px;
+    display: inline-block;
+    vertical-align: middle;
 }
 
-li a {
-    display: block;
-    color: #585858;
-    text-align: center;
-    text-decoration: none;
+.menu {
+	padding: 0;
+	margin: 0;
+	display: block;
 }
 
-
-
-.logoMain {
-	margin-top: 10px;
+.menu li {
 	float: left;
+    display: block;
+	margin-right: 33px;
 }
 
+nav :last-child{
+	margin-right: 0;
+}
 
+.menu li a {
+    color: #585858;
+	text-decoration: none;
+	font-size: 18px;
+	padding-bottom: 8px;
+}
