--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,22 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: #f1f1f1;
+}
+
+.container {
+	width: 1080px;
+	margin: 0 auto;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.clearfix:after {
+	content: '';
+	display: table;
+	width: 100%;
+	clear: both;
+}
+
+div {
+	box-sizing: border-box;
 }
