--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,14 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  background-color: #f1f1f1;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.container {
-	width: 1080px;
-	margin: 0 auto;
-  font-family: 'Open Sans', sans-serif;
-}
-
-.clearfix:after {
-	content: '';
-	display: table;
-	width: 100%;
-	clear: both;
-}
-
-div {
-	box-sizing: border-box;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
